# cyril

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  Cargo.toml  LICENSE  README.md  SYNTECT_INTEGRATION.md
.claude/: settings.json  settings.local.json
.cyril-08eh/: design.md  findings.md  plan.md  related-issues.md
.cyril-0v42/: build-audit.md  design.md  findings.md  oracle.sh  plan.md  related-issues.md  review-decisions.md  trace_openat.py
.cyril-0v42/probe/: Cargo.toml
.cyril-0v42/probe/src/: main.rs
.cyril-0wyn/: design.md  findings.md  oracle-initialize-handler-excerpt.txt  oracle-resolveAgentContext.txt  oracle-resolveRemoteToolAllowlist.txt  plan.md  probe-a-baseline-kas-build.jsonl  probe-a-dump-agent.sh  probe-a-post-impl-capture.jsonl  probe-b-name-ab.py  probe-c-memory-tools.py  related-issues.md  review-decisions.md
.cyril-3zy4/: design.md  findings.md  plan.md  probe_3zy4.rs  related-issues.md
.cyril-4rc1/: design.md  findings.md  oracle-output.txt  oracle-worktree-isolation.sh  plan.md  probe-hook-fires.sh  probe-output.txt  probe-worktree-isolation.sh  proto-helper.sh  related-issues.md
.cyril-5et2/: context_usage_raw.json  design.md  oracle.sh  plan.md  probe.rs
.cyril-6iek/: build-audit.md  design.md  findings.md  kas-wrapper.sh  plan.md  probe-fingerprint.py  related-issues.md  review-decisions.md  test_bridge-default-vs-kas-POST.out  test_bridge-default-vs-kas.out  test_bridge-v2-POST.out
.cyril-6r3a/: build-audit.md  design.md  findings.md  plan.md  probe_6r3a.py  related-issues.md
.cyril-7bdu/: PROVE-IT.md  budgeted-plan.md  falsifiable-design.md  host_callbacks_2.10.0.json  initialize_result_2.10.0.json
.cyril-7z7u/: budgeted-plan.md  falsifiable-design.md  (+4 more)
.cyril-84ca/probe/: Cargo.toml
.cyril-84ca/probe/src/: main.rs
.cyril-q9dx/: .gitignore  Cargo.toml  acceptance-oracle-output.txt  acceptance-oracle.py  acceptance-probe-output.tsv  acceptance-render-oracle-output.txt  acceptance-render-oracle.py  acceptance-render-output.tsv  design-falsifier-output.txt  design-falsifier.py  design.md  material-boundaries.md  oracle-output.tsv  oracle.py  plan.md  probe.rs  prototype.md  registry-oracle-output.txt  registry-oracle.py  related-issues.md  render-oracle-output.tsv  render-oracle.py  render-probe-output.tsv  render-probe.rs  resolution-budget.rs  spec.md
crates/cyril/: Cargo.toml
crates/cyril-core/: Cargo.toml
crates/cyril-core/examples/: kas0_turnend_probe.rs
crates/cyril-core/src/: client.rs  error.rs  event.rs  kiro_agent_config.rs  kiro_ext.rs  lib.rs  path.rs  session.rs  subagent.rs  transport.rs  voice.rs
crates/cyril-core/src/capabilities/: fs.rs  mod.rs  terminal.rs
crates/cyril-core/src/commands/: builtin.rs  mod.rs  subagent.rs
crates/cyril-core/src/hooks/: builtins.rs  config.rs  types.rs
crates/cyril-core/src/platform/: mod.rs  path.rs  terminal.rs
crates/cyril-core/src/protocol/: bridge.rs  client.rs  convert.rs  engine.rs  fingerprint.rs  identity.rs  mod.rs  transport.rs
crates/cyril-core/src/protocol/convert/: kas.rs  kiro.rs  mod.rs  probe_qo13.rs
crates/cyril-core/src/protocol/kas/: auth.rs  discovery.rs  hooks.rs  host_io.rs  mod.rs  settings.rs  terminal_io.rs  version.rs
crates/cyril-core/src/types/: agent_command.rs  agent_engine.rs  code_panel.rs  command.rs  config.rs  event.rs  hook.rs  kas_hooks.rs  kas_spawn.rs  message.rs  mod.rs  plan.rs  present_as.rs  prompt.rs  session.rs  session_entry.rs  subagent.rs  tool_call.rs  voice.rs
crates/cyril-core/tests/: kas_freepath_smoke.rs  kas_fs_host_io_smoke.rs  kas_settings_handshake_smoke.rs  kas_wrapper_smoke.rs
crates/cyril-core/tests/fixtures/kas/: README.md  agent_message_chunk.json  session_info_update.json  session_info_update_steering_cleared.json  session_info_update_steering_inclusion.json  session_info_update_steering_injected.json  session_info_update_steering_queued.json  session_info_update_turn_completion.json  session_info_update_turn_end.json
crates/cyril-ui/: Cargo.toml
crates/cyril-ui/src/: cache.rs  chrome_theme_tests.rs  error.rs  file_completer.rs  floor_tests.rs  highlight.rs  lib.rs  palette.rs  probe_a14l.rs  render.rs  spinner.rs  state.rs  stream_buffer.rs  subagent_ui.rs  text.rs  theme.rs  traits.rs
crates/cyril-ui/src/fixtures/: conversation-theme-baseline.tsv
crates/cyril-ui/src/snapshots/: cyril_ui__floor_tests__roomy_approval_80x24.snap  cyril_ui__floor_tests__roomy_idle_80x24.snap  cyril_ui__floor_tests__roomy_inflow_80x24.snap  cyril_ui__render__tests__theme_seam_idle.snap  cyril_ui__render__tests__theme_seam_picker.snap  cyril_ui__render__tests__theme_seam_tool_diff.snap
crates/cyril-ui/src/widgets/: approval.rs  chat.rs  code_panel.rs  crew_panel.rs  hooks_panel.rs  input.rs  markdown.rs  mod.rs  modal.rs  picker.rs  suggestions.rs  toolbar.rs  voice.rs
crates/cyril-ui/tests/: conversation_theme_sources.rs  modal_theme.rs  picker_viewport.rs  widget_theme_sources.rs
crates/cyril-ui/tests/fixtures/: chrome-theme-baseline.tsv  conversation-theme-baseline.tsv  input-wrap-oracle.tsv  modal-baseline.tsv
crates/cyril-voice/: Cargo.toml
crates/cyril-voice/src/: lib.rs
crates/cyril/examples/: l7tw_death_probe.rs  test_acp.rs  test_bridge.rs
crates/cyril/src/: app.rs  commands.rs  event.rs  file_completer.rs  main.rs
crates/cyril/src/ui/: approval.rs  chat.rs  highlight.rs  input.rs  markdown.rs  mod.rs  picker.rs  tool_calls.rs  toolbar.rs
crates/cyril/tests/: event_routing.rs
crates/win-kiro/: Cargo.toml
crates/win-kiro-core/: Cargo.toml
crates/win-kiro-core/src/: client.rs  event.rs  lib.rs  session.rs  transport.rs
crates/win-kiro-core/src/capabilities/: fs.rs
crates/win-kiro-core/src/hooks/: builtins.rs  mod.rs  types.rs
crates/win-kiro/src/: app.rs  commands.rs  event.rs  main.rs  tui.rs
crates/win-kiro/src/ui/: approval.rs  input.rs  toolbar.rs
experiments/kiro-proxy-rs/: Cargo.toml  run-with-proxy.sh
experiments/kiro-proxy-rs/src/: main.rs
experiments/knowledge-panel-render/: Cargo.toml  README.md
experiments/knowledge-panel-render/src/: main.rs
(+536 files in other folders)
