[workspace]
resolver = "2"
members = ["crates/cyril-core", "crates/cyril-ui", "crates/cyril"]

[workspace.package]
version = "0.2.0-alpha.1"
edition = "2024"
rust-version = "1.94.0"
license = "MIT"
repository = "https://github.com/dwalleck/cyril"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "warn"  # Downgraded to warn — tests legitimately use .expect()

[workspace.dependencies]
tokio = { version = "1.50", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
anyhow = "1"
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.29", default-features = false, features = ["event-stream"] }
pulldown-cmark = { version = "0.13", default-features = false }
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
similar = "2"
nucleo-matcher = "0.3"
toml = "1"
clap = { version = "4", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["json"] }
agent-client-protocol = "0.10"
async-trait = "0.1"
tokio-util = { version = "0.7", default-features = false, features = ["compat"] }
futures-util = { version = "0.3", default-features = false }
rstest = "0.25"
insta = "1.42"
tempfile = "3"

[profile.dev]
incremental = true
opt-level = 0

[profile.test]
opt-level = 1

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"

[profile.release-with-debug]
inherits = "release"
debug = 2
strip = "none"
