[workspace]
resolver = "2"
members = ["crates/cyril-core", "crates/cyril-ui", "crates/cyril-voice", "crates/cyril"]

[workspace.package]
version = "0.2.0-alpha.1"
edition = "2024"
rust-version = "1.94.0"
license = "MIT"
repository = "https://github.com/dwalleck/cyril"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "warn"  # Downgraded to warn — tests legitimately use .expect()

[workspace.dependencies]
tokio = { version = "1.50", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = { version = "1", default-features = false, features = ["std", "perf"] }
thiserror = "2"
tracing = "0.1"
anyhow = "1"
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.29", default-features = false, features = ["event-stream", "bracketed-paste"] }
pulldown-cmark = { version = "0.13", default-features = false }
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
similar = "2"
nucleo-matcher = "0.3"
toml = "1"
clap = { version = "4", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["json"] }
agent-client-protocol = { version = "0.10", features = ["unstable_session_model", "unstable_session_usage"] }
async-trait = "0.1"
tokio-util = { version = "0.7", default-features = false, features = ["compat"] }
futures-util = { version = "0.3", default-features = false }
unicode-width = "0.2"
rstest = "0.25"
insta = "1.42"
tempfile = "3"
# KAS auth source (cyril-dcc6): read-only access to kiro-cli's data.sqlite3.
# `bundled` compiles its own libsqlite3 — hermetic, no system-lib skew.
rusqlite = { version = "0.39", default-features = false, features = ["bundled"] }
# Process-group kill of the agent subprocess tree on drop (cyril-0pms). Safe
# killpg wrapper — `unsafe_code = "forbid"` governs OUR code, not dependencies.
nix = { version = "0.31", default-features = false, features = ["signal"] }

[profile.dev]
incremental = true
opt-level = 0

[profile.test]
opt-level = 1

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"

[profile.release-with-debug]
inherits = "release"
debug = 2
strip = "none"
