[package]
name = "cyril-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core protocol logic, types, and session management for the Cyril ACP client"

[lints]
workspace = true

[features]
# KAS engine support (ADR-0002). Default-off; EMPTY in KAS-0 — it only fixes the
# gate so the credential-reading code KAS-1 (cyril-evwh) adds is compiled in only
# under `--features kas`. A default build cannot read the kiro token. Pulls in
# `tokio/fs` so the auth responder reads the token file without blocking the
# bridge's single-threaded executor; the default build keeps a minimal tokio.
kas = ["tokio/fs"]

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "macros", "time", "process"] }
tracing = { workspace = true }
toml = { workspace = true }
agent-client-protocol = { workspace = true }
async-trait = { workspace = true }
tokio-util = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
tracing-subscriber = { workspace = true }
