[package]
name = "cyril-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core protocol logic, types, and session management for the Cyril ACP client"

[lints]
workspace = true

[features]
# KAS engine support (ADR-0002). Default-off — the credential-reading code
# (KAS-1 cyril-evwh, auth-source swap cyril-dcc6) is compiled in only under
# `--features kas`; a default build cannot read the kiro credential store.
# Pulls in `tokio/fs` for non-blocking file I/O on the bridge's single-threaded
# executor, `tokio/io-util` for draining terminal pipes while a kill signal is
# watched (terminal_io, cyril-lw67), and `rusqlite` for read-only access to
# kiro-cli's data.sqlite3.
kas = ["tokio/fs", "tokio/io-util", "dep:rusqlite"]

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "macros", "time", "process"] }
tracing = { workspace = true }
toml = { workspace = true }
agent-client-protocol = { workspace = true }
async-trait = { workspace = true }
tokio-util = { workspace = true }
futures-util = { workspace = true }
rusqlite = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
tracing-subscriber = { workspace = true }
