[package]
name = "cyril-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core protocol logic, types, and session management for the Cyril ACP client"

[lints]
workspace = true

[features]
# KAS engine support (ADR-0002). Default-off — the credential-reading code
# (KAS-1 cyril-evwh, auth-source swap cyril-dcc6) is compiled in only under
# `--features kas`; a default build cannot read the kiro credential store.
# Pulls in `tokio/fs` for non-blocking file I/O on the bridge's single-threaded
# executor, `tokio/io-util` for draining terminal pipes while a kill signal is
# watched (terminal_io, cyril-lw67), `rusqlite` for read-only access to
# kiro-cli's data.sqlite3, and `tempfile` for the atomic host-io write path
# (temp + fsync + rename, cyril-0v42).
kas = ["tokio/fs", "tokio/io-util", "dep:rusqlite", "dep:tempfile"]

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# `io-util` powers the stderr drain (`BufReader`/`read_until`) in
# `protocol/transport.rs` (cyril-0gke).
tokio = { workspace = true, features = ["sync", "rt", "macros", "time", "process", "io-util"] }
tracing = { workspace = true }
toml = { workspace = true }
agent-client-protocol = { workspace = true }
async-trait = { workspace = true }
tokio-util = { workspace = true }
futures-util = { workspace = true }
rusqlite = { workspace = true, optional = true }
tempfile = { workspace = true, optional = true }

# Unix-only: `nix` does not build on Windows, where cyril spawns
# `wsl kiro-cli acp` and keeps only the `kill_on_drop` backstop.
[target.'cfg(unix)'.dependencies]
# Group-kill of the agent subprocess tree when the bridge drops its handle
# (cyril-0pms) — `acp-server.js` is a grandchild, unreachable by kill_on_drop.
nix = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
tracing-subscriber = { workspace = true }
