[package]
name = "cyril-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "TUI rendering and input handling for the Cyril ACP client"

[lints]
workspace = true

[dependencies]
cyril-core = { path = "../cyril-core" }
ratatui = { workspace = true }
crossterm = { workspace = true }
syntect = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
pulldown-cmark = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
rstest = { workspace = true }
insta = { workspace = true }
