[package]
name = "cyril"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Cross-platform TUI client for Kiro CLI via the Agent Client Protocol (ACP)"

[lints]
workspace = true

[[bin]]
name = "cyril"
path = "src/main.rs"

[dependencies]
cyril-core = { path = "../cyril-core" }
