[package]
name = "cyril"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Cross-platform TUI client for Kiro CLI via the Agent Client Protocol (ACP)"

[lints]
workspace = true

[[bin]]
name = "cyril"
path = "src/main.rs"

[features]
default = []
# Speech-to-text voice input (ROADMAP CN2). Off by default — pulls in the
# cyril-voice engine and (later) its audio/ML deps. Build with `--features voice`.
voice = ["dep:cyril-voice"]

[dependencies]
cyril-core = { path = "../cyril-core" }
cyril-ui = { path = "../cyril-ui" }
cyril-voice = { path = "../cyril-voice", optional = true }
tokio = { workspace = true, features = ["full"] }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
rstest = { workspace = true }
