[package]
name = "win-kiro"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "win-kiro"
path = "src/main.rs"

[dependencies]
win-kiro-core = { path = "../win-kiro-core" }
agent-client-protocol = "0.9"
tokio = { version = "1", features = ["full"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tui-markdown = "0.3"
tui-textarea = "0.7"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3"
