[package]
name = "kiro-proxy-rs"
version = "0.0.1"
edition = "2024"
publish = false
description = "POC logging proxy between Kiro's v2 TUI (bun + tui.js) and kiro-cli-chat. Standalone — NOT in cyril's workspace."

# Declare ourselves a self-contained workspace so cargo doesn't try to join
# cyril's root workspace. Keeps our target/ separate and builds independently.
[workspace]

[[bin]]
name = "kiro-proxy-rs"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.50", features = ["rt-multi-thread", "macros", "process", "io-std", "io-util", "sync", "time"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

# sacp integration (Phase B+C): schema types for structured parsing,
# plus sacp-tokio's AcpAgent for the downstream subprocess spawn.
sacp = "11.0.0"
sacp-tokio = "11.0.0"
agent-client-protocol-schema = "0.11.0"

[profile.release]
# Keep POC build times low; real optimization comes later.
opt-level = 1
lto = false
debug = false

[profile.dev]
opt-level = 0
